балуюсь с форком и гитом

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
     />
     <title>Document</title>
+    <!-- немой шок  -->
   </head>
   <body>
     <header class="section-header">
